@@ -48,6 +48,24 @@ C<method get_critical : int ();>
 
 Calls native L<X509_EXTENSION_get_critical|https://docs.openssl.org/1.1.1/man3/X509_EXTENSION_get_object> functions given the pointer value of the instance, and returns its return value.
 
+=head2 set_object
+
+C<method set_object : int ($obj : L<Net::SSLeay::ASN1_OBJECT|SPVM::Net::SSLeay::ASN1_OBJECT>);>
+
+Calls native L<X509_EXTENSION_set_object|https://docs.openssl.org/1.1.1/man3/X509_EXTENSION_get_object> functions given the pointer value of the instance, the pointer value of $obj, and returns its return value.
+
+=head2 set_critical
+
+C<method set_critical : int ($crit ; int);>
+
+Calls native L<X509_EXTENSION_set_critical|https://docs.openssl.org/1.1.1/man3/X509_EXTENSION_get_object> functions given the pointer value of the instance, $crit, and returns its return value.
+
+=head2 set_data
+
+C<method set_data : int ($data : L<Net::SSLeay::ASN1_OCTET_STRING|SPVM::Net::SSLeay::ASN1_OCTET_STRING>);>
+
+Calls native L<X509_EXTENSION_set_data|https://docs.openssl.org/1.1.1/man3/X509_EXTENSION_get_object> functions given the pointer value of the instance, the pointer value of $data, and returns its return value.
+
 =head2 DESTROY
 
 C<method DESTROY : void ();>
